<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        app:srcCompat="@drawable/pt" />

        <TextView
            android:layout_width="212dp"
            android:layout_height="83dp"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/welcome_to_point_delivery"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_begin_with_us"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/details"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/first_name"
          android:textSize="20sp">

      </com.google.android.material.textfield.TextInputEditText>

  </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comfirm_password"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/SignUpbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="normal"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white">

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_with"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="@color/blackk"
            android:gravity="center"/>

        
        <LinearLayout
            android:id="@+id/socialicons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <ImageView
                android:layout_width="48dp"
                android:layout_height= "48dp"
                android:layout_margin="20dp"
                android:src="@drawable/gmail"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height= "48dp"
                android:layout_margin="20dp"
                android:src="@drawable/facebook"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height= "48dp"
                android:layout_margin="20dp"
                android:src="@drawable/linkein">

            </ImageView>


        </LinearLayout>




    </LinearLayout>

</ScrollView>





